--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -1,2 +1,5 @@
 ﻿{
+  "sentry": {
+    "dsn": "https://88d744a1c3c220c9079bf91cb9cf4d66@o4508087707762688.ingest.de.sentry.io/4508126431019088"
+  }
 }
