--- a/src/VehicleManagementAPI/VehicleManagementAPI.csproj
+++ b/src/VehicleManagementAPI/VehicleManagementAPI.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="Microsoft.AspNetCore.HealthChecks" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" />
     <PackageReference Include="Pitstop.Infrastructure.Messaging" />
+    <PackageReference Include="Sentry" />
+    <PackageReference Include="Sentry.AspNet" />
+    <PackageReference Include="Sentry.AspNetCore" />
+    <PackageReference Include="Sentry.Profiling" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
     <PackageReference Include="Serilog.AspNetCore" />
     <PackageReference Include="Serilog.Settings.Configuration" />
