#17 Added DBContext for Maintenance History

--- a/src/MaintenanceHistoryAPI/appsettings.Development.json
+++ b/src/MaintenanceHistoryAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MaintenanceHistoryCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
