--- a/src/MaintenanceHistoryAPI/MaintenanceHistoryAPI.csproj
+++ b/src/MaintenanceHistoryAPI/MaintenanceHistoryAPI.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <AssemblyName>Pitstop.MaintenanceHistoryAPI</AssemblyName>
+        <RootNamespace>Pitstop.MaintenanceHistoryAPI</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,6 +17,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0-rc.2.24474.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-rc.2.24474.1" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.10" />
+        <PackageReference Include="Pitstop.Infrastructure.Messaging" Version="5.1.0" />
+        <PackageReference Include="Pitstop.Infrastructure.Messaging.Customized" Version="6.0.6" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
@@ -39,10 +43,6 @@
       <Reference Include="Polly">
         <HintPath>..\..\..\..\..\..\.nuget\packages\polly\8.4.0\lib\net6.0\Polly.dll</HintPath>
       </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Infrastructure.Messaging\Infrastructure.Messaging.csproj" />
     </ItemGroup>
 
 </Project>
