--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -130,11 +130,20 @@ services:
       - customermanagementapi
       - vehiclemanagementapi
       - workshopmanagementapi
+      - diyservice
     ports:
       - "7005:7005"
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
 
+  diyservice:
+    build:
+      context: ./DIYService
+    container_name: diyservice
+    ports:
+      - "5001:5001"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
 volumes:
   sqlserverdata:
     external: true
