Added minimal logic files for DIY pages

--- a/src/WebApp/appsettings.Development.json
+++ b/src/WebApp/appsettings.Development.json
@@ -14,8 +14,9 @@
     }
   },
   "APIServiceLocations": {
-    "CustomerManagementAPI": "localhost:5100",
     "VehicleManagementAPI": "localhost:5000",
-    "WorkshopManagementAPI": "localhost:5200"
+    "CustomerManagementAPI": "localhost:5100",
+    "WorkshopManagementAPI": "localhost:5200",
+    "DIYManagementAPI":      "localhost:5300"
   }
 }
