--- a/src/WebApp/appsettings.Production.json
+++ b/src/WebApp/appsettings.Production.json
@@ -14,8 +14,9 @@
     }
   },
   "APIServiceLocations": {
-    "CustomerManagementAPI": "customermanagementapi:5100",
     "VehicleManagementAPI": "vehiclemanagementapi:5000",
-    "WorkshopManagementAPI": "workshopmanagementapi:5200"
+    "CustomerManagementAPI": "customermanagementapi:5100",
+    "WorkshopManagementAPI": "workshopmanagementapi:5200",
+    "DIYManagementAPI": "diymanagementapi:5300"
   }
 }
