#2 added sentry to new service

--- a/src/MaintenanceHistoryAPI/appsettings.Development.json
+++ b/src/MaintenanceHistoryAPI/appsettings.Development.json
@@ -1,11 +1,29 @@
 {
-  "ConnectionStrings": {
-    "MaintenanceHistoryCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
+  "RabbitMQPublisher": {
+    "Host": "localhost",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "Exchange": "Pitstop"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "VehicleManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ],
+    "Properties": {
+      "Application": "MaintenanceHistoryAPI"
     }
+  },
+  "sentry": {
+    "dsn": "https://2f1c9e692313073aa07b9b7f99367e88@o4508087707762688.ingest.de.sentry.io/4508132155392080"
   }
 }
+
