--- a/src/MaintenanceHistoryAPI/appsettings.Production.json
+++ b/src/MaintenanceHistoryAPI/appsettings.Production.json
@@ -19,7 +19,10 @@
       }
     ],
     "Properties": {
-      "Application": "VehicleManagementAPI"
+      "Application": "MaintenanceHistoryAPI"
     }
+  },
+  "sentry": {
+    "dsn": "https://2f1c9e692313073aa07b9b7f99367e88@o4508087707762688.ingest.de.sentry.io/4508132155392080"
   }
 }
