--- a/src/WorkshopManagementAPI/appsettings.Production.json
+++ b/src/WorkshopManagementAPI/appsettings.Production.json
@@ -22,5 +22,8 @@
     "Properties": {
       "Application": "WorkshopManagementAPI"
     }
+  },
+  "sentry": {
+    "dsn": "https://1036b58611e260c8921bf866d7b8a3cb@o4508087707762688.ingest.de.sentry.io/4508126862180432"
   }
 }
