--- a/src/CustomerManagementAPI/appsettings.Development.json
+++ b/src/CustomerManagementAPI/appsettings.Development.json
@@ -21,5 +21,8 @@
     "Properties": {
       "Application": "CustomerManagementAPI"
     }
+  },
+  "sentry": {
+    "dsn": "https://630c118bdfa59edce72bde561fb1b793@o4508087707762688.ingest.de.sentry.io/4508126661771344"
   }
 }
