--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -135,6 +135,17 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
 
+  dyimanagementapi:
+    image: pitstop/diymanagementapi:1.0
+    build: DIYManagementAPI
+    depends_on:
+      - rabbitmq
+      - sqlserver
+    ports:
+      - "5300"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+
 volumes:
   sqlserverdata:
     external: true
