#23 Fix DLL & connectie

--- a/src/DIYManagementAPI/appsettings.Production.json
+++ b/src/DIYManagementAPI/appsettings.Production.json
@@ -6,7 +6,7 @@
     "Exchange": "Pitstop"
   },
   "ConnectionStrings": {
-    "CustomerManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=DIYManagement;trustServerCertificate=true;"
+    "DIYManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=DIYManagement;trustServerCertificate=true;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
