--- a/src/WorkshopManagementEventHandler/WorkshopManagementEventHandler.csproj
+++ b/src/WorkshopManagementEventHandler/WorkshopManagementEventHandler.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Pitstop.WorkshopManagementEventHandler</AssemblyName>
     <RootNamespace>Pitstop.WorkshopManagementEventHandler</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IsContainerApp>true</IsContainerApp>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
 
