--- a/src/InvoiceService/InvoiceService.csproj
+++ b/src/InvoiceService/InvoiceService.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Pitstop.InvoiceService</AssemblyName>
     <RootNamespace>Pitstop.InvoiceService</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IsContainerApp>true</IsContainerApp>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
 
