--- a/src/TimeService/TimeService.csproj
+++ b/src/TimeService/TimeService.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Pitstop.TimeService</AssemblyName>
     <RootNamespace>Pitstop.TimeService</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IsContainerApp>true</IsContainerApp>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
 
