#27 WIP: RabbitMQ to two API'S

--- a/src/MaintenanceHistoryAPI/appsettings.Production.json
+++ b/src/MaintenanceHistoryAPI/appsettings.Production.json
@@ -3,6 +3,7 @@
     "Host": "rabbitmq",
     "Username": "rabbitmquser",
     "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "Queue": "MaintenanceHistory",
     "Exchange": "Pitstop"
   },
   "ConnectionStrings": {
