#27 WIP: RabbitMQ eventhandler

--- a/src/MaintanenceHistoryEventHandler/appsettings.Production.json
+++ b/src/MaintanenceHistoryEventHandler/appsettings.Production.json
@@ -1,9 +1,16 @@
 ﻿{
-  "RabbitMQPublisher": {
+  "RabbitMQHandler": {
     "Host": "rabbitmq",
     "Username": "rabbitmquser",
     "Password": "DEBmbwkSrzy9D1T9cJfa",
-    "Exchange": "Pitstop"
+    "Queue": "MaintenanceHistory",
+    "Exchange": "Pitstop",
+    "RoutingKey": ""
+  },
+  "RabbitMQ": {
+      "Host": "rabbitmq",
+      "Username": "rabbitmquser",
+      "Password": "DEBmbwkSrzy9D1T9cJfa"
   },
   "ConnectionStrings": {
     "MaintenanceHistoryCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
@@ -11,18 +18,15 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": "Information",
+    "Properties": {
+      "Application": "MaintenanceHistoryEventHandler"
+    },
     "WriteTo": [
       { "Name": "Console" },
       {
         "Name": "Seq",
         "Args": { "serverUrl": "http://logserver:5341" }
       }
-    ],
-    "Properties": {
-      "Application": "MaintenanceHistoryAPI"
-    }
-  },
-  "sentry": {
-    "dsn": "https://2f1c9e692313073aa07b9b7f99367e88@o4508087707762688.ingest.de.sentry.io/4508132155392080"
+    ]
   }
 }
