--- a/src/RentalCarManagementAPI/appsettings.Development.json
+++ b/src/RentalCarManagementAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RentalCarManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalCarManagement;trustServerCertificate=true;"
   }
 }
