Changed docker files to use the new API's

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -71,6 +71,28 @@ services:
       - "5200"
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+        
+  rentalcarmanagementapi:
+    image: pitstop/rentalcarmanagement:1.0
+    build: RentalCarManagementAPI
+    depends_on:
+      - rabbitmq
+      - sqlserver
+    ports:
+      - "5300"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+        
+  rentalmanagementapi:
+    image: pitstop/rentalmanagement:1.0
+    build: RentalManagementAPI
+    depends_on:
+      - rabbitmq
+      - sqlserver
+    ports:
+      - "5400"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
 
   auditlogservice:
     image: pitstop/auditlogservice:1.0
