--- a/src/docker-compose.local.yml
+++ b/src/docker-compose.local.yml
@@ -16,3 +16,11 @@ services:
   workshopmanagementapi:
     ports:
       - "5200:5200"
+        
+  rentalcarmanagementapi:
+    ports:
+      - "5300:5300"
+  
+  rentalmanagementapi:
+    ports:
+      - "5400:5400"
