--- a/src/WorkshopManagementEventHandler/appsettings.Production.json
+++ b/src/WorkshopManagementEventHandler/appsettings.Production.json
@@ -13,7 +13,9 @@
     "Password": "DEBmbwkSrzy9D1T9cJfa"
   },
   "ConnectionStrings": {
-    "WorkshopManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=WorkshopManagement;trustServerCertificate=true;"
+    "WorkshopManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=WorkshopManagement;trustServerCertificate=true;",
+    "MaintenanceHistoryCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
+    
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
