--- a/src/RentalCarManagementAPI/Dockerfile
+++ b/src/RentalCarManagementAPI/Dockerfile
@@ -1,23 +1,23 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
+﻿FROM pitstop-dotnet-sdk-base:1.0 AS build-env
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["RentalCarManagementAPI/RentalCarManagementAPI.csproj", "RentalCarManagementAPI/"]
-RUN dotnet restore "RentalCarManagementAPI/RentalCarManagementAPI.csproj"
-COPY . .
-WORKDIR "/src/RentalCarManagementAPI"
-RUN dotnet build "RentalCarManagementAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+# Copy necessary files and restore as distinct layer
+COPY *.csproj ./
+RUN dotnet restore
 
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "RentalCarManagementAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
 
-FROM base AS final
+# Build runtime image
+FROM pitstop-dotnet-aspnet-base:1.0
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "RentalCarManagementAPI.dll"]
+COPY --from=build-env /app/out .
+
+# Expose ports
+EXPOSE 5300/tcp
+ENV ASPNETCORE_URLS http://*:5300
+HEALTHCHECK --interval=30s --timeout=3s --retries=1 CMD curl --silent --fail http://localhost:5300/hc || exit 1
+
+# Start
+ENTRYPOINT ["dotnet", "Pitstop.RentalCarManagementAPI.dll"]
