--- a/src/RentalCarManagementAPI/RentalCarManagementAPI.csproj
+++ b/src/RentalCarManagementAPI/RentalCarManagementAPI.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+    
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <AssemblyName>Pitstop.RentalCarManagementAPI</AssemblyName>
+        <RootNamespace>Pitstop.RentalCarManagementAPI</RootNamespace>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
