Changed connection string on production

--- a/src/RentalCarManagementAPI/appsettings.Production.json
+++ b/src/RentalCarManagementAPI/appsettings.Production.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "RentalCarManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalCarManagement;trustServerCertificate=true;"
+    "RentalCarManagementCN": "server=sqlserver,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalCarManagement;trustServerCertificate=true;"
   }
 }
