Connectie tussen front en backend werkend

--- a/src/WebApp/appsettings.Development.json
+++ b/src/WebApp/appsettings.Development.json
@@ -16,6 +16,8 @@
   "APIServiceLocations": {
     "CustomerManagementAPI": "localhost:5100",
     "VehicleManagementAPI": "localhost:5000",
-    "WorkshopManagementAPI": "localhost:5200"
+    "WorkshopManagementAPI": "localhost:5200",
+    "RentalCarManagementAPI": "localhost:5300",
+    "RentalManagementAPI": "localhost:5400"
   }
 }
