--- a/src/WebApp/appsettings.Production.json
+++ b/src/WebApp/appsettings.Production.json
@@ -16,6 +16,8 @@
   "APIServiceLocations": {
     "CustomerManagementAPI": "customermanagementapi:5100",
     "VehicleManagementAPI": "vehiclemanagementapi:5000",
-    "WorkshopManagementAPI": "workshopmanagementapi:5200"
+    "WorkshopManagementAPI": "workshopmanagementapi:5200",
+    "RentalCarManagementAPI": "rentalcarmanagementapi:5300",
+    "RentalManagementAPI": "rentalmanagementapi:5400"
   }
 }
