--- a/tekton/pipeline-run/dotnet-sdk-base-build-run.yaml
+++ b/tekton/pipeline-run/dotnet-sdk-base-build-run.yaml
@@ -13,7 +13,7 @@ spec:
     - name: repo-url
       value: "https://github.com/hanaim-devops/devops-bp-pitstop-uitbreiding-team-tbd"
     - name: image-url
-      value: "luukjp/dotnet-sdk-base:1.0"
+      value: "luukjp/pitstop-dotnet-sdk-base:1.0"
   workspaces:
     - name: output
       volumeClaimTemplate:
