--- a/src/WebApp/Dockerfile
+++ b/src/WebApp/Dockerfile
@@ -1,4 +1,4 @@
-FROM pitstop-dotnet-sdk-base:1.0 AS build-env
+FROM luukjp/pitstop-dotnet-sdk-base:1.0 AS build-env
 WORKDIR /app
 
 # Install node
@@ -23,7 +23,7 @@ RUN gulp default
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM pitstop-dotnet-aspnet-base:1.0
+FROM luukjp/pitstop-dotnet-aspnet-base:1.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 
