--- a/tekton/pipeline-run/vehiclemanagementapi-build-run.yaml
+++ b/tekton/pipeline-run/vehiclemanagementapi-build-run.yaml
@@ -18,7 +18,7 @@ spec:
     - name: output
       volumeClaimTemplate:
         spec:
-          storageClassName: local-storage
+          storageClassName: local-path
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
