Logic for new DIY Avond (#32)
* Logic for new DIY Avond

* DIYManagementAPI opzet

* #1 Uncommended code oops

* #23 Fix DLL & connectie

* start with basic new api avond and webapp

* #1 changed everything to evening and mechanic and small upgrades on api and frontend

implmented mapper and action for creation of evening

* deleted unnecessary file

* MR feedback; required in DTO, deleted non used file, removed old title and warnings fix

---------

Co-authored-by: MitchelFleury <mitchel.fle@gmail.com>

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -135,7 +135,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
 
-  dyimanagementapi:
+  diymanagementapi:
     image: pitstop/diymanagementapi:1.0
     build: DIYManagementAPI
     depends_on:
