--- a/src/MaintenanceHistoryAPI/appsettings.Development.json
+++ b/src/MaintenanceHistoryAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     "Exchange": "Pitstop"
   },
   "ConnectionStrings": {
-    "VehicleManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
+    "MaintenanceHistoryCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=MaintenanceHistory;trustServerCertificate=true;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
