--- a/src/ReviewManagementAPI/appsettings.Development.json
+++ b/src/ReviewManagementAPI/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Properties": {
-    "Application": "ReviewManagementAPI"
+  "ConnectionStrings": {
+    "ReviewManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=ReviewManagement;trustServerCertificate=true;"
   }
 }
