--- a/src/ReviewManagementAPI/appsettings.Production.json
+++ b/src/ReviewManagementAPI/appsettings.Production.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Properties": {
-    "Application": "ReviewManagementAPI",
+  "ConnectionStrings": {
+    "ReviewManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=ReviewManagement;trustServerCertificate=true;"
   }
 }
