--- a/src/k8s/webapp-linkerd.yaml
+++ b/src/k8s/webapp-linkerd.yaml
@@ -24,7 +24,7 @@ spec:
       - env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Production
-        image: pitstop/webapp:1.0
+        image: luukjp/pitstop/webapp:1.0
         imagePullPolicy: IfNotPresent
         name: webapp
         ports:
