#42 fix deploy pipeline

--- a/.github/workflows/Nuke_Deploy.yml
+++ b/.github/workflows/Nuke_Deploy.yml
@@ -41,3 +41,4 @@ jobs:
         env:
           DOCR_EU_DEV_PASSWORD: ${{ secrets.DOCR_EU_DEV_PASSWORD }}
           DOCR_EU_DEV_USERNAME: ${{ secrets.DOCR_EU_DEV_USERNAME }}
+          KUBECONFIG_CLUSTER: ${{ secrets.KUBECONFIG_CLUSTER }}
