14 prometheus in api (#53)
* basic prometheus werkend

* controller update

* removed network in docker-compose

* PR comments

* Typo

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -146,6 +146,18 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - "./DIYManagementAPI/prometheus.yml:/etc/prometheus/prometheus.yml"
+    ports:
+      - 9090:9090
+
+  node-exporter:
+    image: prom/node-exporter
+    ports:
+      - 9100:9100
+
 volumes:
   sqlserverdata:
     external: true
