--- a/src/DIYManagementAPI/DIYManagementAPI.csproj
+++ b/src/DIYManagementAPI/DIYManagementAPI.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Pitstop.Infrastructure.Messaging" Version="5.1.0" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
