--- a/src/k8s/diymanagementapi.yaml
+++ b/src/k8s/diymanagementapi.yaml
@@ -27,6 +27,13 @@ spec:
         name: diymanagementapi
         ports:
         - containerPort: 5300
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "200Mi"
+          limits:
+            cpu: "200m"
+            memory: "400Mi"
       restartPolicy: Always
 
 ---
@@ -47,3 +54,19 @@ spec:
     nodePort: 30008
   selector:
     app: diymanagementapi
+
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: diymanagementapi
+  namespace: pitstop
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: diymanagementapi
+  minReplicas: 1
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 50
