--- a/src/RentalManagementAPI/appsettings.Production.json
+++ b/src/RentalManagementAPI/appsettings.Production.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Properties": {
-    "Application": "CustomerManagementAPI"
+  "ConnectionStrings": {
+    "RentalManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalManagement;trustServerCertificate=true;"
   }
 }
