--- a/src/k8s/auditlogservice.yaml
+++ b/src/k8s/auditlogservice.yaml
@@ -22,7 +22,7 @@ spec:
       - env:
         - name: DOTNET_ENVIRONMENT
           value: Production
-        image: luukjp/pitstop/auditlogservice:1.0
+        image: luukjp/auditlogservice:1.0
         imagePullPolicy: IfNotPresent
         name: auditlogservice
       restartPolicy: Always
