--- a/src/RentalManagementEventHandler/appsettings.Production.json
+++ b/src/RentalManagementEventHandler/appsettings.Production.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,33 +6,32 @@
     }
   },
   "RabbitMQHandler": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Username": "rabbitmquser",
     "Password": "DEBmbwkSrzy9D1T9cJfa",
     "Exchange": "Pitstop",
     "Queue": "RentalManagement",
     "RoutingKey": ""
   },
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa"
+  },
   "ConnectionStrings": {
-    "RentalManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalManagement;trustServerCertificate=true;"
+    "RentalManagementCN": "server=sqlserver;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalManagement;trustServerCertificate=true;"
   },
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console"
-    ],
+    "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": "Information",
     "Properties": {
       "Application": "RentalManagementEventhandler"
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
+      { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
+        "Args": { "serverUrl": "http://logserver:5341" }
       }
     ]
   }
