--- a/src/RentalCarManagementAPI/appsettings.Development.json
+++ b/src/RentalCarManagementAPI/appsettings.Development.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMQPublisher": {
+    "Host": "localhost",
+    "Username": "rabbitmquser",
+    "Password": "DEBmbwkSrzy9D1T9cJfa",
+    "Exchange": "Pitstop"
+  },
   "ConnectionStrings": {
     "RentalCarManagementCN": "server=localhost,1434;user id=sa;password=8jkGh47hnDw89Haq8LN2;database=RentalCarManagement;trustServerCertificate=true;"
   }
