--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -133,6 +133,16 @@ services:
       - rabbitmq
     environment:
       - DOTNET_ENVIRONMENT=Production
+        
+  rentalmanagementeventhandler:
+    image: pitstop/rentalmanagementeventhandler:1.0
+    build: RentalManagementEventHandler
+    container_name: rentalmanagementeventhandler
+    depends_on:
+      - rabbitmq
+      - sqlserver
+    environment:
+      - DOTNET_ENVIRONMENT=Production
 
   workshopmanagementeventhandler:
     image: pitstop/workshopmanagementeventhandler:1.0
@@ -154,6 +164,7 @@ services:
       - workshopmanagementapi
       - rentalcarmanagementapi
       - rentalmanagementapi
+      - rentalmanagementeventhandler
     ports:
       - "7005:7005"
     environment:
